@@ -50,8 +50,7 @@ specifies whether \code{"conditions"} (columns; default) or
 \code{"bonds"} (rows) should be summarized.}
 
 \item{\ldots}{arguments passed to internal/other methods.
-added.
-newly added fragments third column: number of newly covered bonds.}
+added.}
 }
 \value{
 An \linkS4class{NCBSet} object.
@@ -74,9 +73,11 @@ of fragments/bonds the one with the highest assigned intensity is used. Use
 \code{n} to limit the number of iterations and combinations that should be
 returned.
 If \code{minN} is set at least \code{minN} fragments have to be added to the
-combinations. The function returns a 2-column matrix. The first column
-contains the index of the condition (column number) and the second one the
-newly added number of fragments.
+combinations. The function returns a 5-column matrix. The first column
+contains the index (\code{Index}) of the condition (column number). The next
+columns contain the newly added number of fragments or bonds
+(\code{FragmentsAddedToCombination}, \code{BondsAddedToCombination}) and the fragments
+or bonds in the condition (\code{FragmentsInCondition}, \code{BondsInCondition}).
 
 \item \code{fragmentationMap}: Plot fragmentation map.
 
